<resources>
    <string name="app_name">AndroidRetrofitApp</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="school">School</string>
    <string name="kosba">Kosba</string>
    <string name="mailexammple">Kosba@example.com</string>
</resources>
